# flask-react-shadcn-template

./: .flaskenv  .gitignore  README.md  plan.md  setup.sh
.github/workflows/: ci.yml
backend/: __init__.py  app.py  config.py  extensions.py  pyproject.toml  requirements.txt
backend/migrations/versions/: 0185651bf60b_initial_migration.py  3b2813e251d2_initial_migration.py  45fc99052287_initial_migration.py  cab77c455f1f_initial_migration.py
backend/models/: billing.py  user.py
backend/routes/: __init__.py  auth.py  billing.py
backend/src/: auth.py  email_service.py
backend/tests/: conftest.py  test_api.py  test_models.py
frontend/: .env.development  .env.production  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: PrivateRoute.tsx  UserItem.tsx
frontend/src/components/common/: FloatingNav.tsx  Header.tsx  Layout.tsx
frontend/src/components/ui/: card.tsx  use-toast.ts
frontend/src/constants/: appConfig.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useNavigationAuth.ts
frontend/src/pages/: AuthCallbackPage.tsx  ForgotPasswordPage.tsx  HomePage.tsx  LoginPage.tsx  ResetPasswordPage.tsx
frontend/src/services/: auth.ts
frontend/src/types/: auth.ts
frontend/src/utils/: axiosInstance.tsx  errorUtils.ts
